# ignite

./: 404.html  Cargo.toml  bytecode.igb  bytecode2.igb  docs.html  index.html  module.ign  pieces.ign  sigma.ign  sigma.ignite  tetris.ign  vite.config.js
assets/: index-CGvUGDWJ.css  index-Cn3Afs5e.js  index-DPq6JmCX.css  index-DQYmyYd0.js  index-K8hMa-kO.js
examples/tetris/: main.ign  pieces.ign  tetris.ign
public/: 404.html
public/docs_raw/quickstart/: installation.md  using.md
src/: App.css  App.jsx  macros.rs  main.rs
src/compiler/: compiler.rs  mod.rs  native_functions.rs  optimization.rs
src/components/doc_components/: code.css  code_block.jsx  doc_component.css  igniteLanguage.jsx
src/components/topbar/: topbar.jsx
src/language/: ast.rs  lexer.rs  mod.rs  nodes.rs  parser.rs  token.rs
src/misc/: mod.rs  to_index.rs
src/pages/: Docs.jsx  Home.jsx  NotFound.jsx
src/pages/styles/: docs.css  not_found.css
src/standard_lib/: std_lib.rs
src/virtual_machine/: builtin.rs  chunk.rs  inst.rs  mod.rs  value.rs  vm.rs
src/virtual_machine/libs/: dict_lib.rs  io_lib.rs  lib.rs  list_lib.rs  math_lib.rs  mod.rs  string_lib.rs  tuple_lib.rs  type_lib.rs
src/virtual_machine/libs/namespaces/: fs_lib.rs  io_lib.rs  math_lib.rs  mod.rs  random_lib.rs
src/virtual_machine/modules/: mod.rs
src/virtual_machine/namespaces/: namespace.rs  standard_namespace.rs
src/virtual_machine/traits/: member_accessible.rs  mod.rs
src/virtual_machine/types/: dict.rs  enum.rs  function.rs  list.rs  mod.rs  string.rs  struct.rs  structdef.rs
(+21 files in other folders)
